--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,54 @@
-# Database Configuration
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=dotnet_react_template
+# ===========================================
+# SECRETS CONFIGURATION
+# ===========================================
+# Choose one option:
+# Option 1: Use Infisical (recommended for production)
+# Option 2: Use environment variables directly
+# Option 3: Use other secrets managers (see docs)
 
-# Backend Configuration
+# Option 1: Infisical Configuration
+USE_INFISICAL=false
+INFISICAL_TOKEN=your_infisical_service_token_here
+INFISICAL_PROJECT_ID=your_project_id_here
+INFISICAL_ENVIRONMENT=dev
+INFISICAL_URL=https://app.infisical.com
+
+# ===========================================
+# Option 2: Direct Environment Variables
+# ===========================================
+# If not using Infisical, set these directly:
+
+# Database
+DATABASE_URL=Host=postgres;Database=dotnet_react_template;Username=postgres;Password=postgres
+
+# JWT Configuration (CHANGE THESE IN PRODUCTION!)
+JWT_SECRET_KEY=YourSuperSecretKeyThatIsAtLeast32CharactersLong!ChangeInProduction
+JWT_ISSUER=DotnetReactTemplate
+JWT_AUDIENCE=DotnetReactTemplateUsers
+JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=15
+JWT_REFRESH_TOKEN_EXPIRATION_DAYS=7
+
+# ===========================================
+# APPLICATION SETTINGS
+# ===========================================
 ASPNETCORE_ENVIRONMENT=Development
 ASPNETCORE_URLS=http://+:8080
 
-# JWT Configuration (Override in production!)
-JWT_SECRET_KEY=YourSuperSecretKeyThatIsAtLeast32CharactersLong!
-JWT_ISSUER=DotnetReactTemplate
-JWT_AUDIENCE=DotnetReactTemplateUsers
-
-# Frontend Configuration
+# Frontend
 VITE_API_URL=http://localhost:8080
 NODE_ENV=development
 
-# Bancard Configuration (if needed)
+# ===========================================
+# BANCARD CONFIGURATION (if needed)
+# ===========================================
 BANCARD_PUBLIC_KEY=your_public_key
 BANCARD_PRIVATE_KEY=your_private_key
+
+# ===========================================
+# PRODUCTION NOTES
+# ===========================================
+# - NEVER commit this file with real secrets!
+# - Use .env.local for local development (gitignored)
+# - Use Infisical, AWS Secrets Manager, or Azure Key Vault in production
+# - Rotate secrets regularly
+# - Use different secrets per environment (dev, staging, prod)
