--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,18 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8080
-      - ConnectionStrings__DefaultConnection=Host=postgres;Database=dotnet_react_template;Username=postgres;Password=postgres
+      # Secrets Management - Environment Variables (override these in production)
+      - DATABASE_URL=Host=postgres;Database=dotnet_react_template;Username=postgres;Password=postgres
+      - JWT_SECRET_KEY=YourSuperSecretKeyThatIsAtLeast32CharactersLong!ChangeInProduction
+      - JWT_ISSUER=DotnetReactTemplate
+      - JWT_AUDIENCE=DotnetReactTemplateUsers
+      - JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=15
+      - JWT_REFRESH_TOKEN_EXPIRATION_DAYS=7
+      # Infisical (uncomment to use)
+      # - USE_INFISICAL=true
+      # - INFISICAL_TOKEN=${INFISICAL_TOKEN}
+      # - INFISICAL_PROJECT_ID=${INFISICAL_PROJECT_ID}
+      # - INFISICAL_ENVIRONMENT=dev
     volumes:
       - ./src/Backend:/app
       - /app/bin
